--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,28 +2,28 @@ name: CI
 
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
 
 
   workflow_dispatch:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu latest
     
     steps:
       - uses: actions/checkout@v3
 
-      - name: Setup-Nodejs
+      - name: Setup Nodejs
       - uses: actions/setup-node@v3
         with: 
           node-version: 16.x
         
-      - name: Install-Dependencies
+      - name: Install Dependencies
         run: yarn
         
       - name: Build
-        run: yarn-build
+        run: yarn build
         
       - uses: appleboy/scp-action@master
         with:
